sbb-backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbb-backend-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: sbb-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sbb-backend
    spec:
      containers:
        - name: sbb-app
          image: jangswan/cn_board_app:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
