sbb-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sbb-frontend-service
spec:
  selector:
    app.kubernetes.io/name: sbb-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
