sbb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sbb-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sbb-frontend-service
            port:
              number: 80
